fix: remove white space

--- a/shelter/css/style.scss
+++ b/shelter/css/style.scss
@@ -981,7 +981,7 @@ header {
             width: 16.25em;
             height: 16.985625em;
             margin-top: 6.25em;
-            margin-right: 0em;
+            margin-right: 1em;
             margin-left: 4.375em;
         }
     }
